Changed chrome://flags description for BundledConnectionHelp

The previous description contained a long URL that was not wrapping,
causing a scrollbar to show up in chrome://flags when the window for
some window sized. The description was reworded to remove the URL.

Bug: 860215
Change-Id: I687997b9eae09eb827a5483cf67ce9e0960a67b6
Reviewed-on: https://chromium-review.googlesource.com/1132083
Reviewed-by: Christopher Thompson <cthomp@chromium.org>
Commit-Queue: Carlos IL <carlosil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573875}
Former-commit-id: aafcd73a2fb827cce14e3f9028ac12e844d68469